# Lux

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
Assets/Shaders/: Blit.fragment.glsl  Blit.vertex.glsl
Diagnostics/: Baseline.diagsession
Lux/Include/: Bvh.h  Camera.h  Color.h  HitRecord.h  Material.h  Mesh.h  Object.h  Ray.h  ResourceManager.h  Scene.h  Texture.h
Lux/Include/glad/: glad.h
Lux/Source/: Bvh.cpp  Camera.cpp  Main.cpp  Ray.cpp  ResourceManager.cpp  Texture.cpp  glad.c
